--- a/deployment/backend/service.yml
+++ b/deployment/backend/service.yml
@@ -4,11 +4,11 @@ metadata:
   name: backend-todo
   namespace: practice
   labels:
-    app: backend-todo
+    app: backend-todo-list-kube
 spec:
   ports:
     - name: http
       port: 8080
       targetPort: http
   selector:
-    app: backend-todo
+    app: backend-todo-list-kube
